compiler/testData/diagnostics/tests/inference/builderInference/kt51464.diag.txt
/kt51464.kt:12:15: error: not enough information to infer type variable R
    flowOf(1).transform { doEmit(this) }
              ^

